[package]
name = "threegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.25.0", features = ["mint"] }
glam = { version = "0.25.0", features = ["mint"] }
mint = "0.5.9"

[dev-dependencies]
eframe = { version = "0.25.0" }

