[package]
name = "threegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { version = "0.30", features = ["mint", "serde"] }
glam = { version = "0.25.0", features = ["mint", "serde"] }
serde = { version = "1", features = ["derive"] }
mint = "0.5.9"

[dev-dependencies]
eframe = { version = "0.30" }

